Customizacion de errores

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -283,7 +283,14 @@
                   <%= e.title %><br/>
                   <%= e.start_date.strftime("%d-%m-%Y")%>
                   </h4>
-                  </a>      
+                  </a>   
+                  <div class="middle" >
+                    <div class="text text-center">
+                        <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" style="text-decoration: none" >
+                              <h4>Haz Click para ver Detalle</h4>
+                        </a>
+                      </div><!-- fin del text -->
+                    </div><!-- fin del middle -->
                 <% end %>
                   </div><!-- fin de container-agr -->
                 </div>
@@ -323,7 +330,14 @@
                         <%= categoria[1][i].title %><br/>
                         <%= categoria[1][i].start_date.strftime("%d-%m-%Y")%>
                         </h4>
-                        </a>                    
+                        </a> 
+                        <div class="middle" >
+                          <div class="text text-center">
+                              <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" style="text-decoration: none" >
+                                    <h4>Haz Click para ver Detalle</h4>
+                              </a>
+                            </div><!-- fin del text -->
+                          </div><!-- fin del middle -->                    
                     <% end %>
                   </div><!-- container-agr-->
                </div><!-- col -->
@@ -362,6 +376,13 @@
                           <%= categoria[1][j].start_date.strftime("%d-%m-%Y")%>
                           </h4>
                           </a> 
+                          <div class="middle" >
+                            <div class="text text-center">
+                                <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" style="text-decoration: none" >
+                                      <h4>Haz Click para ver Detalle</h4>
+                                </a>
+                              </div><!-- fin del text -->
+                            </div><!-- fin del middle -->
                         <% end %>
                         </div><!-- container-agr-->
                 </div><!-- col -->
@@ -399,6 +420,13 @@
                           <%= categoria[1][j].start_date.strftime("%d-%m-%Y")%>
                           </h4>
                           </a> 
+                          <div class="middle" >
+                            <div class="text text-center">
+                                <a rel="nofollow" rel="noreferrer" href="<%= @mylink%>" style="text-decoration: none" >
+                                      <h4>Haz Click para ver Detalle</h4>
+                                </a>
+                              </div><!-- fin del text -->
+                            </div><!-- fin del middle -->
                         <% end %>
                         </div><!-- container-agr-->
                 </div><!-- col -->
