--- a/app/views/categories/new.html.erb
+++ b/app/views/categories/new.html.erb
@@ -38,7 +38,7 @@
 			<div class="col-xs-12">
 				<% if @category.errors.any? %>
 			    <div >
-			      <h2><%= pluralize(@category.errors.count, "error") %> Se necesitan los campos marcados en rojo para completar la publicacion</h2>
+			      <h2><%= pluralize(@category.errors.count, "Errores") %> Se necesitan completar todos los campos de la publicacion</h2>
 
 			      <ul>
 			      <% @category.errors.full_messages.each do |msg| %>
