--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0" />
   <title>Eventos de emprendimiento</title>
   <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
@@ -19,8 +20,6 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-
 
 <header>
 
@@ -71,42 +70,26 @@
         <p class="col-xs-2"> Fecha Hasta: </p>
         <p class="col-xs-3"><%= date_select(params[:search] ,"key1", order: [:day, :month, :year], :use_month_numbers => true) %> </p>
         <%= submit_tag "Busqueda por Fecha", class: 'btn btn-success ' %>
-        <div class="dropdown col-xs-10">
-            <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown">Buscar
-              <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu">
-              <li>
-                <a href=/welcome/index?buscar=dia>
-                  <span>Hoy</span>
-                </a>
-              </li>
-              <li>
-                <a href=/welcome/index?buscar=manana>
-                  <span>Mañana</span>
-                </a>
-              </li>
-              <li>
-                <a href=/welcome/index?buscar=semana>
-                  <span>Semana</span>
-                </a>
-              </li>
-              <li>
-                <a href=/welcome/index?buscar=mes>
-                  <span>Mes</span>
-                </a>
-              </li>
-              <li>
-                <a href=/welcome/index?buscar=todos>
-                  <span>Todos</span>
-                </a>
-              </li>    
-            </ul>
+
+        <div class="dropdown">
+          <button class='btn btn-primary'>Buscar por Periodo</button>
+          <div class="dropdown-content">
+            <a href=/welcome/index?buscar=hoy>Hoy</a>
+            <a href=/welcome/index?buscar=manana>Mañana</a>
+            <a href=/welcome/index?buscar=semana>Semana</a>
+            <a href=/welcome/index?buscar=mes>Mes</a>
+            <a href=/welcome/index?buscar=todos>Todos</a>
+
+          </div>
         </div>
     </p>
     <% end %> 
+
 </div>  
-</div>    
+</div>   
+
+
+
 
 
 <hr />
