--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -18,17 +18,17 @@
           <div class="col-xs-2">
             <%= image_tag "op.png", class: "img-logo" %>
           </div>
-            <div class="col-xs-offset-5 col-xs-3 col-sm-offset-5 col-sm-5 col-md-offset-6 col-md-4">
+            <div class="col-xs-offset-5 col-xs-4 col-sm-offset-5 col-sm-6 col-md-offset-5 col-md-5">
             <% if user_signed_in?  %>
-              <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-primary ' %>
-              <%= link_to 'Publicar', new_category_path, class: 'btn btn-success ' %>
-              <%= link_to 'Publicaciones', categories_path,  class: 'btn btn-warning' %>
-              <%= link_to 'Cerrar Sesión', destroy_user_session_path, method: 'delete', class: 'btn btn-danger '%>
+              <%= link_to 'Inicio', welcome_index_path, class: 'bttn-jelly bttn-md bttn-primary' %>
+              <%= link_to 'Publicar', new_category_path, class: 'bttn-jelly bttn-md bttn-royal' %>
+              <%= link_to 'Publicaciones', categories_path,  class: 'bttn-gradient bttn-md bttn-success' %>
+              <%= link_to 'Cerrar Sesión', destroy_user_session_path, method: 'delete', class: 'bttn-pill bttn-md bttn-danger'%>
               <% else %>
-              <%= link_to 'Inicio', welcome_index_path, class: 'btn btn-primary ' %>
-              <%= link_to 'Iniciar sesión', new_user_session_path, class: 'btn btn-success '  %>
-              <%= link_to 'Registrarse', new_user_registration_path, class: 'btn btn-success ' %>
-              <%= link_to 'Publicar', new_user_registration_path, class: 'btn btn-success ' %>
+              <%= link_to 'Inicio', welcome_index_path, class: 'bttn-jelly bttn-md bttn-primary' %>
+              <%= link_to 'Iniciar sesión', new_user_session_path, class: 'bttn-jelly bttn-md bttn-success'  %>
+              <%= link_to 'Registrarse', new_user_registration_path, class: 'bttn-jelly bttn-md bttn-warning' %>
+              <%= link_to 'Publicar', new_user_registration_path, class: 'bttn-jelly bttn-md bttn-royal' %>
             <% end %>
             </div>
         <!-- fin del if  -->
