--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -44,7 +44,7 @@
               <% else %>
                 <a href=/categories class="bttn-gradient bttn-md bttn-success">Hola <%= current_user.name %></a>
                 <%= link_to 'Publicar', new_category_path, class: 'bttn-jelly bttn-md bttn-royal' %>
-                <%= link_to 'Cerrar Sesión', destroy_user_session_path, method: 'delete', class: 'bttn-pill bttn-md bttn-warning' %>
+                <%= link_to 'Cerrar Sesión', destroy_user_session_path, method: 'delete', class: 'bttn-pill bttn-md bttn-danger' %>
               <% end %>
             <% end %>
             </div>
