--- a/app/views/welcome/index1.html.erb
+++ b/app/views/welcome/index1.html.erb
@@ -240,8 +240,20 @@
   <h1 style="color: gray"><%= "#{categoria[0]}" %></h1>
     <div class="row">
       <div class="col-md-12">
-      <% @mylinkcarousel = "carousel-tilenav" + @cont.to_s %>        
-      <div class="carousel carousel-showmanymoveone slide" id="<%= @mylinkcarousel%>" data-interval="false">
+      <% case @cont %>
+      <% when 0 then  %>
+        <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav" data-interval="false">
+      <% when 1 then  %>
+        <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav1" data-interval="false">
+      <% when 2 then %>
+        <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav2" data-interval="false">
+      <% when 3 then  %>
+        <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav3" data-interval="false">
+      <% when 4 then %>
+        <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav4" data-interval="false">   
+      <% when 5 then  %>
+        <div class="carousel carousel-showmanymoveone slide" id="carousel-tilenav5" data-interval="false">   
+      <% end %>  
       <div class="carousel-inner">
         <div class="item active">
           <% categoria[1].first(3).each do |e|%>
@@ -423,10 +435,27 @@
                 </div><!-- col -->
             <% end %>
            </div> <!-- cierre de carousel-inner -->
-          <% @mylinkcarousel = "#carousel-tilenav" + @cont.to_s %>
-          <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="<%= @mylinkcarousel%>" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
-          <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="<%= @mylinkcarousel%>" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
 
+        <% case @cont %>
+        <% when 0 then  %>
+          <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="#carousel-tilenav" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="#carousel-tilenav" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <% when 1 then  %>
+          <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="#carousel-tilenav1" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="#carousel-tilenav1" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <% when 2 then %>
+          <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="#carousel-tilenav2" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="#carousel-tilenav2" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <% when 3 then %>
+          <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="#carousel-tilenav3" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="#carousel-tilenav3" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <% when 4 then %>
+          <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="#carousel-tilenav4" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="#carousel-tilenav4" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <% when 5 then  %>
+          <a rel="nofollow" rel="noreferrer" class="left carousel-control" href="#carousel-tilenav5" data-slide="prev"><i class="glyphicon glyphicon-chevron-left"></i></a>
+          <a rel="nofollow" rel="noreferrer" class="right carousel-control" href="#carousel-tilenav5" data-slide="next"><i class="glyphicon glyphicon-chevron-right"></i></a>
+        <% end %>
         <% end %><!-- for -->
         </div><!-- cierre de carousel -->
       </div><!-- cierre de col -->
